@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Farmacia {
  -NIF
  -email
  -morada
}

class Estacionamento {
  -numeroLote
  -carregador
}

class Utilizador {
  -NIF
  -nome
  -email
  -numeroSegurancaSocial
  -password
}

class Administrador {
  -NIF
  -nome
  -email
  -numeroSegurancaSocial
  -password
}

class Parque {
  -numeroMaximo
  -tipo
}

Administrador "1" -- "1" Utilizador: atua como >
Administrador "1" -- "1" Parque: define numeroMaximo >
Farmacia "1" -- "1" Parque: possui >
Parque "1" -- "*" Estacionamento: tem >
Farmacia "1" -- "1" Administrador: tem >

@enduml